---
source: src/grammer/am.rs
expression: output
---
Italics [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Slash: "/" [ offsets: 0, position: ( line: 0, col: 0 ) ] ]
  Word: "an" [ offsets: 1, position: ( line: 0, col: 1 ) ] ]
  WhiteSpace: " " [ offsets: 3, position: ( line: 0, col: 3 ) ] ]
  Word: "italics" [ offsets: 4, position: ( line: 0, col: 4 ) ] ]
  WhiteSpace: " " [ offsets: 11, position: ( line: 0, col: 11 ) ] ]
  Word: "text" [ offsets: 12, position: ( line: 0, col: 12 ) ] ]
  WhiteSpace: " " [ offsets: 16, position: ( line: 0, col: 16 ) ] ]
  Word: "chunk" [ offsets: 17, position: ( line: 0, col: 17 ) ] ]
  WhiteSpace: " " [ offsets: 22, position: ( line: 0, col: 22 ) ] ]
  Word: "and" [ offsets: 23, position: ( line: 0, col: 23 ) ] ]
  WhiteSpace: " " [ offsets: 26, position: ( line: 0, col: 26 ) ] ]
  Word: "it" [ offsets: 27, position: ( line: 0, col: 27 ) ] ]
  WhiteSpace: " " [ offsets: 29, position: ( line: 0, col: 29 ) ] ]
  Word: "have" [ offsets: 30, position: ( line: 0, col: 30 ) ] ]
  WhiteSpace: " " [ offsets: 34, position: ( line: 0, col: 34 ) ] ]
  Word: "a" [ offsets: 35, position: ( line: 0, col: 35 ) ] ]
  WhiteSpace: " " [ offsets: 36, position: ( line: 0, col: 36 ) ] ]
  Spoiler [ offsets: 37, position: ( line: 0, col: 37 ) ] ]
    Exclamation: "!" [ offsets: 37, position: ( line: 0, col: 37 ) ] ]
    InlineCode [ offsets: 38, position: ( line: 0, col: 38 ) ] ]
      Backtick: "`" [ offsets: 38, position: ( line: 0, col: 38 ) ] ]
      Italics [ offsets: 39, position: ( line: 0, col: 39 ) ] ]
        Slash: "/" [ offsets: 39, position: ( line: 0, col: 39 ) ] ]
        Maths [ offsets: 40, position: ( line: 0, col: 40 ) ] ]
          Dollar: "$" [ offsets: 40, position: ( line: 0, col: 40 ) ] ]
          Variable [ offsets: 41, position: ( line: 0, col: 41 ) ] ]
            Ampersand: "&" [ offsets: 41, position: ( line: 0, col: 41 ) ] ]
            NullModifier [ offsets: 42, position: ( line: 0, col: 42 ) ] ]
              Percent: "%" [ offsets: 42, position: ( line: 0, col: 42 ) ] ]
              SingleQoute: "'" [ offsets: 43, position: ( line: 0, col: 43 ) ] ]
              Bold [ offsets: 44, position: ( line: 0, col: 44 ) ] ]
                Asterisk: "*" [ offsets: 44, position: ( line: 0, col: 44 ) ] ]
                Comma [ offsets: 45, position: ( line: 0, col: 45 ) ] ]
                  Comma: "," [ offsets: 45, position: ( line: 0, col: 45 ) ] ]
                  StrikeThrough [ offsets: 46, position: ( line: 0, col: 46 ) ] ]
                    Hyphen: "-" [ offsets: 46, position: ( line: 0, col: 46 ) ] ]
                    Superscript [ offsets: 47, position: ( line: 0, col: 47 ) ] ]
                      Caret: "^" [ offsets: 47, position: ( line: 0, col: 47 ) ] ]
                      UnderLine [ offsets: 48, position: ( line: 0, col: 48 ) ] ]
                        Underscore: "_" [ offsets: 48, position: ( line: 0, col: 48 ) ] ]
                        Verbatim [ offsets: 49, position: ( line: 0, col: 49 ) ] ]
                          Pipe: "|" [ offsets: 49, position: ( line: 0, col: 49 ) ] ]
                          Word: "verbatim" [ offsets: 50, position: ( line: 0, col: 50 ) ] ]
                          WhiteSpace: " " [ offsets: 58, position: ( line: 0, col: 58 ) ] ]
                          Pipe: "|" [ offsets: 59, position: ( line: 0, col: 59 ) ] ]
                        Underscore: "_" [ offsets: 60, position: ( line: 0, col: 60 ) ] ]
                      Caret: "^" [ offsets: 61, position: ( line: 0, col: 61 ) ] ]
                    Hyphen: "-" [ offsets: 62, position: ( line: 0, col: 62 ) ] ]
                  Comma: "," [ offsets: 63, position: ( line: 0, col: 63 ) ] ]
                Asterisk: "*" [ offsets: 64, position: ( line: 0, col: 64 ) ] ]
              SingleQoute: "'" [ offsets: 65, position: ( line: 0, col: 65 ) ] ]
              Percent: "%" [ offsets: 66, position: ( line: 0, col: 66 ) ] ]
            Ampersand: "&" [ offsets: 67, position: ( line: 0, col: 67 ) ] ]
          Dollar: "$" [ offsets: 68, position: ( line: 0, col: 68 ) ] ]
        Slash: "/" [ offsets: 69, position: ( line: 0, col: 69 ) ] ]
      Backtick: "`" [ offsets: 70, position: ( line: 0, col: 70 ) ] ]
    Exclamation: "!" [ offsets: 71, position: ( line: 0, col: 71 ) ] ]
  WhiteSpace: " " [ offsets: 72, position: ( line: 0, col: 72 ) ] ]
  Word: "chunk" [ offsets: 73, position: ( line: 0, col: 73 ) ] ]
  WhiteSpace: " " [ offsets: 78, position: ( line: 0, col: 78 ) ] ]
  Word: "in" [ offsets: 79, position: ( line: 0, col: 79 ) ] ]
  WhiteSpace: " " [ offsets: 81, position: ( line: 0, col: 81 ) ] ]
  Word: "it" [ offsets: 82, position: ( line: 0, col: 82 ) ] ]
  WhiteSpace: " " [ offsets: 84, position: ( line: 0, col: 84 ) ] ]
  Colon: ":" [ offsets: 85, position: ( line: 0, col: 85 ) ] ]
  RParen: ")" [ offsets: 86, position: ( line: 0, col: 86 ) ] ]
  Slash: "/" [ offsets: 87, position: ( line: 0, col: 87 ) ] ]
